# AML-Alert-Priorization-Risk-Signal

./: .gitignore  README.md  databricks.yml  dataset_inspection_notes.md  pyproject.toml
.github/workflows/: ci.yml
bi/: AML_Dashboard.pbip  DASHBOARD_BUILD_SPEC.md  README.md
bi/AML_Dashboard.Report/: .platform  definition.pbir
bi/AML_Dashboard.SemanticModel/: .platform
docs/: 00_business_charter.md  01_nonfunctional_requirements.md  02_environment_and_branching.md  03_schema_contracts.md  04_streaming_incident_response.md  05_architecture.md  06_pipeline_survival_framework.md  07_month_end_incident_runbook.md  08_postmortem_template.md  09_ownership_and_access_model.md  10_architecture_decisions.md  11_failure_scenario_map.md  12_performance_and_layout.md  13_table_driven_config.md
resources/dashboards/: README.md  aml_dashboard.lvdash.json  dashboard.yml
resources/ddl/: 00_setup_catalogs.sql  01_ownership_and_access.sql
resources/jobs/: bronze_ingestion_job.yml  month_end_critical_path_job.yml  silver_job.yml  streaming_job.yml  table_maintenance_job.yml
resources/ops/: README.md  business_impact_alerts.sql  cost_sla_scorecard.sql  day_over_day_variance.sql  (+4 more)
scripts/: check_ai_risk_patterns.py  check_contract_risk.py  check_governance_policies.py  stage_raw_files.py
tests/: test_bulk_match.py  test_fuzzy_match.py  test_normalize.py  test_ops_control.py  test_reference_config.py  test_reliability_scenarios.py  test_risk_guardrails.py  test_scd2.py  test_schema_drift.py  test_sql_runner.py  test_synthetic_identity.py  test_time_anchor.py
(+63 files in other folders)
