[project]
name = "aml-lakehouse"
version = "0.1.0"
description = "AML Alert Prioritization & Entity Risk Signal Lakehouse"
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.9",
    "pandas>=2.2",
]
# numpy is deliberately NOT pinned here -- Databricks serverless compute ships numpy 2.2.6
# preinstalled, and an earlier attempt to pin numpy>=1.26 in this wheel's dependencies broke
# serverless Python kernel startup with a real "compiled using NumPy 1.x cannot be run in
# NumPy 2.2.6" error (confirmed on an actual job run, not assumed). Let the environment's
# own numpy be used instead of forcing a version through this wheel.

[project.optional-dependencies]
spark = [
    "pyspark>=3.5",
]
elliptic = [
    "kagglehub>=0.3.13",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
